--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,13 +1,41 @@
-test.ts
-test.js
+# any
+/test*.ts
 
-# compiled output
+# project output
 /assets
-/dist
-/node_modules
 /logs
 /.secrets
 /plainPasswords
+/discordUsers
+
+# Logs
+/logs
+*.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# compiled output
+/dist
+/node_modules
+
+# OS
+.DS_Store
+
+# Tests
+/coverage
+/.nyc_output
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
 # IDE - VSCode
 .vscode/*
