--- a/backend/.vscode/launch.json
+++ b/backend/.vscode/launch.json
@@ -2,27 +2,36 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Attach",
-      "port": 9229,
-      "request": "attach",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
+      "name": "Attach to Node.js",
       "type": "node",
+      "request": "attach",
+      "port": 9229,
+      "restart": true,
+      "skipFiles": ["<node_internals>/**"],
+      "outFiles": ["${workspaceFolder}/dist/**/*.js"],
+      "localRoot": "${workspaceFolder}",
+      "preLaunchTask": "build",
+      "sourceMaps": true,
+      "cwd": "${workspaceFolder}",
+      "processId": "${command:PickProcess}",
+      "internalConsoleOptions": "openOnSessionStart",
+      "env": {
+        "NODE_ENV": "dev"
+      }
     },
     {
-      "name": "Launch",
-      "request": "launch",
-      "runtimeArgs": [
-        "run",
-        "dev"
-      ],
-      "cwd": "${workspaceFolder}",
-      "runtimeExecutable": "npm",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
+      "name": "Launch via NPM",
       "type": "node",
-    },
+      "request": "launch",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run-script", "dev"],
+      "skipFiles": ["<node_internals>/**"],
+      "preLaunchTask": "build",
+      "sourceMaps": true,
+      "internalConsoleOptions": "openOnSessionStart",
+      "env": {
+        "NODE_ENV": "dev"
+      }
+    }
   ]
 }
