--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@fryshost/backend",
+  "author": "Frys",
   "private": true,
   "scripts": {
-    "build": "rimraf dist && nest build",
-    "dev": "nest start --watch --debug 9229 --preserveWatchOutput",
+    "build": "nest build",
+    "dev": "cross-env NODE_ENV=dev NODE_OPTIONS=--trace-warnings nest start --watch --debug 9229 --preserveWatchOutput -p tsconfig.dev.json",
     "start": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "clean": "rimraf dist node_modules .secrets package-lock.json plainPasswords assets logs test* vscode-profile-*",
-    "typeorm": "ts-node -r tsconfig-paths/register ../node_modules/typeorm/cli -d ./dist/system/ormConfig.js"
+    "lint": "eslint \"./src/**/*.ts\" --fix",
+    "typeorm": "ts-node -r tsconfig-paths/register typeorm/cli -d ./dist/ormconfig.js",
+    "typeorm:drop": "npm run typeorm schema:drop",
+    "typeorm:sync": "npm run typeorm schema:sync"
   },
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
@@ -28,31 +30,43 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cross-env": "^7.0.3",
     "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.2",
     "env-var": "^7.3.1",
     "fastify": "^4.17.0",
+    "handlebars": "^4.7.6",
     "minecraft-skin-converter": "^1.3.6",
     "mysql2": "^3.2.4",
     "nestjs-fastify-redirect": "^1.0.1",
     "nodemailer": "^6.9.1",
+    "pug": "^3.0.1",
     "qrcode-with-logos": "^1.0.3",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^5.0.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.15",
+    "webpack": "^5.0.0",
     "yaml": "^2.2.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.4.2",
     "@nestjs/schematics": "^9.1.0",
+    "@nestjs/testing": "^9.4.1",
     "@types/authenticator": "^1.1.1",
     "@types/bcryptjs": "^2.4.2",
+    "@types/ejs": "^3.0.3",
+    "@types/jest": "^29.5.1",
     "@types/node": "^18.16.1",
     "@types/nodemailer": "^6.4.7",
+    "@types/pug": "^2.0.6",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "eslint": "^8.39.0",
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "4.2.0",
