--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,30 +1,39 @@
 {
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"],
-  "include": ["src/**/*.ts"],
+  "include": [
+    "./src/**/*.ts",
+    "./test/**/*.ts",
+    "./scripts/**/*.ts",
+    "./ecosystem.config.js",
+    "./test*.ts"
+  ],
+  "exclude": ["node_modules", "dist", ".vscode"],
   "watchOptions": {
-    "watchFile": "fixedPollingInterval"
+    "watchFile": "fixedPollingInterval",
   },
   "compilerOptions": {
+    "useDefineForClassFields": true,
     "module": "commonjs",
-    "declaration": false,
+    "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "target": "es2017",
-    "sourceMap": false,
-    "outDir": "./dist",
-    "baseUrl": "./src",
+    "sourceMap": true,
     "incremental": false,
+    "outDir": "./dist",
+    "baseUrl": "./",
     "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
+    "noImplicitOverride": true,
+    "strictNullChecks": true,
+    "noImplicitAny": true,
+    "strictBindCallApply": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
     "paths": {
-      "@env": ["./system/envConfig"],
-      "@system/*": ["./system/*"]
-    },
+      "@env": ["./src/system/envConfig"],
+      "@system/*": ["./src/system/*"],
+      "~/*": ["./src/*"]
+    }
   }
 }
