--- a/backend/package.json
+++ b/backend/package.json
@@ -3,13 +3,18 @@
   "author": "Frys",
   "private": true,
   "scripts": {
-    "build": "nest build",
+    "build": "nest build -p tsconfig.build.json",
     "dev": "cross-env NODE_ENV=dev NODE_OPTIONS=--trace-warnings nest start --watch --debug 9229 --preserveWatchOutput -p tsconfig.dev.json",
-    "start": "node dist/main",
+    "start": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"./src/**/*.ts\" --fix",
-    "typeorm": "ts-node -r tsconfig-paths/register typeorm/cli -d ./dist/ormconfig.js",
-    "typeorm:drop": "npm run typeorm schema:drop",
-    "typeorm:sync": "npm run typeorm schema:sync"
+    "typeorm": "ts-node -r tsconfig-paths/register typeorm/cli",
+    "typeorm:drop": "npm run typeorm -d ./dist/ormconfig.js schema:drop",
+    "typeorm:sync": "npm run typeorm -d ./dist/ormconfig.js schema:sync",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
